# rustubs

./: .gitignore  .rustfmt.toml  ATTRIBUTIONS  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README  README.md  README.txt  _Makefile  kernel  manifest_srht.yaml  readme.md  rust-analyzer.json  rust-toolchain  startup.s  x86_64-rustubs.json
.builds/: x86_64.yml
boot/: startup-x86_64.s
compiler/: x86_64-linker.ld
defs/: x86_64-hm-linker.ld  x86_64-linker.ld  x86_64-rustubs.json
docs/: calling_convention.txt  interrupt.txt  mem_layout.txt  multiboot.txt  resources.txt  sync_model.md  sync_model.txt  ustar.txt  x86_gdt.txt  x86_paging.txt
isofiles/boot/grub/: grub.cfg
progs/: Makefile  int80.asm  raw_hello.asm
src/: arch.rs  black_magic.rs  defs.rs  fs.rs  io.rs  kthread.rs  lib.rs
src/arch/: mod.rs  x86_64.rs
src/arch/x86_64/: arch_regs.rs  context.rs  gdt.rs  interrupt.rs  io_port.rs  linker.ld  mem.rs  misc.rs  mod.rs  paging.rs
src/arch/x86_64/asm/: e820.s  io_port.s  misc.s  proc.s  startup.s  vectors.s
src/arch/x86_64/interrupt/: idt.rs  mod.rs  pic_8259.rs  pit.rs  plugbox.rs
src/ds/: mod.rs
src/fs/: mod.rs  ustar.rs
src/io/: mod.rs
src/kthread/: echo.rs  kshell.rs  lazy.rs  meeseeks.rs  mod.rs
src/machine/: cgascr.rs  device_io.rs  interrupt.rs  kbd_defs.rs  key.rs  keyctrl.rs  mem.rs  mod.rs  multiboot.rs  serial.rs  time.rs
src/mm/: heap_allocator.rs  mod.rs  pma.rs  vmm.rs
src/proc/: exec.rs  loader.rs  mod.rs  sched.rs  sync.rs  task.rs
src/proc/sync/: bellringer.rs  irq.rs  mod.rs  semaphore.rs
(+3 files in other folders)
