[package]
name = "rustubs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.8"
bitflags = "2.4.2"

[dependencies.num_enum]
version = "0.7.2"
default-features = false

# rebuild components, instead of using the prebuilt ones.
# see https://os.phil-opp.com/heap-allocation/#the-allocator-interface
# [unstable]
# build-std = ["core", "compiler_builtins", "alloc"]

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

# [build]
# target = "x86_64-rustubs"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
debug = 1
lto = true

[profile.release]
panic = "abort"
#opt-level = 0
opt-level = 3
debug = 0
overflow-checks = false
lto = true
codegen-units = 1
debug-assertions = false
