[package]
name = "rustubs"
version = "0.2.0"
edition = "2021"
license = "eupl-1.2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.8"
bitflags = "2.4.2"
# TODO make my own heap allocator
linked_list_allocator = "0.10.5"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
debug = 1
lto = true

[profile.release]
panic = "abort"
#opt-level = 0
opt-level = 3
debug = 0
overflow-checks = false
lto = true
codegen-units = 1
debug-assertions = false
